Fixed grid card wrap

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -131,7 +131,7 @@ section {
 
 .grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
     gap: 2.5rem;
 }
 
